snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.pom.sha256
14876ffebb5cf65314e8a6a85a635b0ac0bf8b3788a0e806e66d6cbedc6847ab